# nostralignment.app.OC-python.src

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
clawhub/: SKILL.md  metadata.json
examples/: basic_usage.py
src/social_alignment/: __init__.py  enclave.py  types.py
tests/: test_enclave.py  test_types.py
