[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-alignment"
version = "0.1.5"
description = "A deterministic pre-action five-lens compass for sovereign AI agents — the alignment pillar of the NSE platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Humanjava Enterprises", email = "dev@humanjava.com" },
]
keywords = [
    "nostr",
    "alignment",
    "ai",
    "sovereign",
    "ethics",
    "safety",
    "escalation",
    "five-lenses",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://nse.dev"
Repository = "https://github.com/HumanjavaEnterprises/nostralignment.app.OC-python.src"
Documentation = "https://nse.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/social_alignment"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
